vlib/v/parser/tests/invalid_enum_decl_script_err.vv
mynum := 10

enum MyEnum {
	aa
	bb
	cc
}
